--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -200,7 +200,16 @@ pages="261--271",
 isbn="978-3-319-24505-8",
 doi="10.1007/978-3-319-24505-8_6"
 }
-
+@article{najman2011equivalence,
+  title={On the equivalence between hierarchical segmentations and ultrametric watersheds},
+  author={Najman, Laurent},
+  journal={Journal of Mathematical Imaging and Vision},
+  volume={40},
+  number={3},
+  pages={231--247},
+  year={2011},
+  publisher={Springer}
+}
 @article{Reibel2003,
 author = {Reibel, Michael},
 title = {Measures of Geographically Uneven Subpopulation Group Change and Local Group Transitions: Examples from Los Angeles},
