--- a/paper/method.tex
+++ b/paper/method.tex
@@ -10,11 +10,12 @@ of neighbourhoods on the basis of our proposed method.
 \begin{figure}
     \centering 
     \includegraphics[width=0.975\linewidth]{overview.pdf}
-    \caption{Overview of the proposed method. A network is generated combining the
-        original census data, encoding the changing geographical information.
-        The network is partitioned into an hierarchy~\citep{markus2017}. The
-        characteristics and evolution of the clusters are then visually
-        represented.
+    \caption{Overview of the proposed method. 
+        \textbf{(a)} A network is generated from the original data,
+        encoding the changing geographical information. 
+        \textbf{(b)} The network is partitioned into an hierarchy. 
+        \textbf{(c)} The characteristics and evolution of the clusters are then
+        visually represented.
         \label{fig:overview}}
 \end{figure}
 
@@ -33,22 +34,22 @@ different total population.
 Each area of each census year is represented as a node, and edges are placed
 between nodes if the corresponding regions share geographic borders in the same
 year. Further, edges are placed between nodes if the corresponding regions
-belong to sequential years and \revision{their geometries intersect. To avoid
-spurious connections caused by geometry fluctuations, one of the geometries is
-slightly shrunk before the intersection, using a buffer of -1e6. More
-importantly, while weights will be associated with these edges before they are
-processed, they are not derived from the geometry, but from the data. The actual
-intersection area is not considered in this representation. } This approach
-leads to a single network representing the whole spatio-temporal space of the
-data. Our objective then becomes to identify partitions of this network such
-that the nodes of each partition are more similar between themselves than to the
-other nodes. 
+belong to sequential years and \revision{1.6/2.6.3}{their geometries intersect.
+To avoid spurious connections caused by small fluctuations, one of the
+geometries is slightly shrunk before the intersection, using a buffer of -1e6.
+While the result would not change considerably by adding more connections
+between nearby regions, these extra connections would greatly increase the
+computational cost. More importantly, while weights will be associated with
+these edges before they are processed, they are not derived from the geometry,
+but from the data. The actual intersection area is not considered in this
+representation. } This approach leads to a single network representing the whole
+spatio-temporal space of the data. 
 
 
 \subsection{Geographic content clustering}
 Having tied the regions together into a network, we can now partition it to
-identify similar sets of regions. \revision{In essence, we are performing
-temporal regionalisation by applying a regionalisation method over this
+identify similar sets of regions. \revision{2.3}{In essence, we are performing
+temporal regionalisation by applying a clustering method over this
 spatio-temporal network.}
 
 We start by adopting a distance function between the nodes, measuring the
@@ -78,15 +79,19 @@ histograms, where the weights can be adjusted by the user.
 
 Once the distances are associated to the edges, we use watershed
 cuts~\citep{Cousty2009} to create an initial clustering, which is then refined
-into a hierarchy using the Sorted Maximal Matching (SMM)~\citep{markus2017} with
-median linkage. The initial watershed step is performed to create an initial
-clustering and reduce the running time of the SMM. We introduced one new
-parameter to this method: a maximum distance threshold for the merges, to avoid
-the early merging of outliers. We refer the reader to the original
-paper~\citep{markus2017} for more details, including a complete performance
-evaluation using several metrics. \revision{We chose this algorithm because it
-is fast, simple, and easily customisable, but our methodology should work with
-any hierarchical network clustering algorithm.}
+into a hierarchy using the Sorted Maximal Matching (SMM)~\citep{markus2017}. The
+initial watershed step is performed to create an initial clustering and reduce
+the running time of the SMM. We introduced one new parameter to this method: a
+maximum distance threshold for the merges, to avoid the early merging of
+outliers. We refer the reader to the original paper~\citep{markus2017} for more
+details, including a complete performance evaluation using several metrics.
+\revision{1.5/2.2}{We chose this algorithm because it is fast,
+simple, and easily customisable, but our methodology should work with any
+hierarchical network clustering algorithm. However, we caution against the use
+of single-linkage methods due to their tendency to form chain-like clusters with
+elements that are similar pairwise, but significantly different on the ends.
+That is also the reason we did not use a Watershed hierarchy
+directly~\citep{najman2011equivalence}.}
 
 
 Each resulting cluster is contiguous in the network. This means that two
@@ -96,7 +101,7 @@ clusters, which can be counter-intuitive. To overcome this issue, we
 graph~\citep{scikit-learn} using only the distances between the histograms.
 These edges connect nodes with similar content, if they are not already
 connected, providing a path for the algorithm to group similar nodes.
-\revision{The regions connected by those edges will be merged on the first
+\revision{2.4}{The regions connected by those edges will be merged on the first
 stages of the clustering, since the nodes they connect are, by definition, as
 similar as possible\footnote{This assertion relies on the euclidean distance and
 its relationship with the space where k-nn operates.}, leaving the remaining
@@ -124,36 +129,51 @@ information about the underlying distribution.
 We also use these statistical measurements to discover what characterises each
 cluster, that is, what makes it different from the others.  We define the
 \emph{relevance} of a variable of an aspect based on the distance between the
-interquartile ranges (IQR) of the clusters in the same hierarchical level. If
+\revision{1.8}{interquartile} ranges (IQR) of the clusters in the same hierarchical level. If
 the IQRs overlap for all clusters, that variable is not relevant to the
 characterisation of the cluster, but if the IQRs are distant, it means that this
 specific range of values is something that only occurs in this cluster.
 Examining IQRs therefore provides users a straightforward visual method for
 determining what variables most clearly define a given cluster.
 
+To allow for an easier visualisation of these ideas, we represent it using an
+\emph{enhanced} version of the traditional boxplot, which includes the IQRs for
+the other clusters, in slightly larger and faded black rectangles. We also
+colour the current IQR according to its relevance, as illustrated in
+Figure~\ref{fig:boxplot}. In this example, this cluster is best defined by the
+proportion of the population with four or more years of college. The user can
+quickly see that this is relevant because the corresponding IQR is coloured with
+the highest relevance present in the legend. It is also clear that, while this
+cluster includes CTs that have between 10\% to 90\% of people in this variable,
+approximately, half of them have about 60\% of the population with four or more
+years of college. Since all the other IQRs are well separated, this is a
+defining characteristic of this cluster. Conversely, the proportion of the
+population with one to three years of college is not relevant, as indicated by
+black fill in the rectangle representing the IQR of this cluster, in overlapping
+position with the rectangles of the other clusters.
 
 \subsection{Clusters and trajectories}
 While the partition of the data into different clusters helps the user to
 understand what groups exist and where they are, we are also interested in the
 evolution of these groups. To examine this process of evolution directly, we
-introduce the concepts\revision{ of \emph{temporal paths} and \emph{trajectories}. 
+introduce the concepts\revision{2.6.4}{ of \emph{temporal paths} and \emph{trajectories}. 
 
 We call a temporal path any sequence of nodes in our representation network such
 that the temporal information associated with the nodes only increases. For
 instance, in Figure~\ref{fig:intuition}, the sequences ACF, ADF, ADG, and BEH
-are temporal paths. With harmonised data, the time-series of to each region
-would form a temporal path, each node would be connected only to its older and
-newer versions, belonging to only one temporal path, as illustrated by the path
-BEF. Since our data is not harmonised, more connections are allowed and each
-node can belong to an arbitrary number of paths.
+are temporal paths. With harmonised data, as illustrated by the path BEF, the
+time-series of each region would form a temporal path, each node would be
+connected only to its older and newer versions, and would belong to only one
+temporal path. Since our data is not harmonised, more connections are allowed
+and each node can belong to an arbitrary number of paths.
 
 Semantically, this is a generalisation of the idea of geographical time-series,
 because each temporal path is one possible option for the data to change over
 time. Returning to Figure~\ref{fig:intuition}, the paths ACF, ADF, and ADG all
 start on the same homogeneous region, but evolve differently over time. In other
 words, this network encodes the information that portions of the region A
-changed to form regions C and D, but we do not know specifically which parts,
-nor we need to, since the same region can belong to several temporal paths.
+changed to form regions C and D, but we do not know specifically which parts.
+Nor do we need to, since the same region can belong to several temporal paths.
 Interestingly, when interpreted in this framework, geographical harmonisation is
 a method to split and/or merge nodes so each belongs to a single temporal path.
 
@@ -163,7 +183,7 @@ each unique sequence of clusters present in this result a \emph{trajectory}.
 Regions on the same trajectory had the same sequence of clusters, therefore had
 similar temporal evolution.}
 
-\subsection{User interface}
+\subsection{Overview of the prototype interface}
 \label{sec:ui}
 To validate and explore the results of our methodology, we built a user
 interface, illustrated in Figure~\ref{fig:ui}, considering census tract (CT)
@@ -176,54 +196,47 @@ details are presented in Section~\ref{sec:study}.
 \begin{figure*}
     \centering 
     \includegraphics[width=0.975\linewidth]{ui.pdf}
-    \caption{Initial interface of our method showing the demographic evolution of Chicago. 
-        \textbf{(a)}: Configuration panel with the current clustering parameters and controls.
-        \textbf{(b)}: Cluster overview illustrating the most relevant aspect for each cluster. 
-        \textbf{(c)}: Trajectories overview and the general evolution of the population, geographical information, and how it changed. 
-        \textbf{(d)}: Details of the selected trajectories, including precise geographic locations, population numbers, and the composition of the aspects.\label{fig:ui}}
+    \caption{Initial interface of our method showing the demographic evolution of Chicago and identifying the objectives of each plot.
+        \textbf{(what)}: Cluster overview illustrating the most relevant aspect for each cluster. 
+        \textbf{(where)}: Maps illustrating the geographical location, both as an overall summary and for each year.
+        \textbf{(how)}: Tabular and visual summmarisation of how the regions classification changed over time.
+        \textbf{(who)}: Demographic details for the currently selected data.
+        \label{fig:ui}}
 \end{figure*}
 
 
-As illustrated by Figure~\ref{fig:ui}, our proposed interface heavily relies on
-colour to express cluster-related information. We adopted this convention
-because colours can be used in all our visual tools in a coherent manner.
-However, there is a limit on the number of distinct colours that can be used. We
-limited the number of clusters to eight because this was the largest number of
-colours that we could reliably and accessibly use, derived from the 8-class
-Dark2 set from ColorBrewer~\citep{ColorBrewer}. 
+As illustrated by Figure~\ref{fig:ui}\unsure{CHECK image/ sec 4.5}, our proposed
+interface heavily relies on colour to express cluster-related information. We
+adopted this convention because colours can be used in all our visual tools in a
+coherent manner. However, there is a limit on the number of distinct colours
+that can be used. We limited the number of clusters to eight because this was
+the largest number of colours that we could reliably and accessibly use, derived
+from the 8-class Dark2 set from ColorBrewer~\citep{ColorBrewer}. 
 
 
-The configuration panel, on top left in Figure~\ref{fig:ui}, displays which
-aspects were used and their weights (following Equation~\ref{eq:dist}). It also
-includes other configuration options that can be altered without re-processing
-the data, such as the number of clusters and the colour option. The gear button
-allows access to the other configuration options that do require further
-processing, such as changing location, aspects, and weights. 
+The configuration panel, on top left in Figure~\ref{fig:ui}, displays the
+processing configuration of the visualised results: which aspects were used and
+their weights (following Equation~\ref{eq:dist}). It also includes other
+configuration options that can be altered without re-processing the data, such
+as the number of clusters and the colour option. The gear button allows access
+to the other configuration options that do require further processing, such as
+changing location, aspects, and weights. 
 
 
-The cluster overview panel, on the bottom left in Figure~\ref{fig:ui}, displays
-a brief summary of each cluster, based on the distance between the IQRs, as
-detailed in Section~\ref{sec:relevance}. The \emph{View all} button opens a new
-panel where all aspects are included, while the chevron at the side lets the
-user expand each cluster separately. 
+The cluster overview panel, marked as \emph{what} in Figure~\ref{fig:ui},
+displays the most relevant aspects for each cluster, based on the distance
+between the IQRs, as detailed in Section~\ref{sec:relevance}.\revision{2.5}{This
+feature allows the user to quickly understand what exists in this region and
+which aspect makes each cluster unique, without going into excessive detail. In
+Chicago's example, we expect race to be relevant in general, and indeed, it is
+recognised as the most relevant aspect for three of the four most distinct
+clusters, with the fourth being education level. As we increase the number of
+clusters, they get more nuanced, requiring more than one aspect for their proper
+characterisation, as each cluster is divided into its composing sub-clusters.
+The \emph{View all} button opens a new panel where all aspects are included,
+while the chevron at the side lets the user expand each cluster separately,
+allowing the exploration of more details on demand.}
 
-We adopted an \emph{enhanced} version of the traditional boxplot, which includes
-the IQRs for the other clusters, in slightly larger and faded black rectangles.
-We also colour the current IQR according to its relevance.  For instance, the
-boxplot that summarises the purple cluster illustrated in Figure~\ref{fig:ui},
-detailed on Figure~\ref{fig:boxplot}, illustrates that this cluster is best
-defined by the proportion of the population with four or more years of college.
-The user can quickly see that this is relevant because the corresponding IQR is
-coloured with the highest relevance present in the legend. It is also clear
-that, while this cluster includes CTs that have between 10\% to 90\% of people
-in this variable, approximately, half of them have about 60\% of the population
-with four or more years of college. Since all the other IQRs are well separated,
-this is a defining characteristic of this cluster. Conversely, the proportion of
-the population with one to three years of college is not relevant, as indicated
-by black fill in the rectangle representing the IQR of this cluster, in
-overlapping position with the rectangles of the other clusters. By clicking on
-the coloured bar above the boxplot, the user can select all trajectories that
-contain this cluster at any point in time.
 
 \begin{figure}
     \centering 
@@ -233,55 +246,68 @@ contain this cluster at any point in time.
 \end{figure}
 
 
-The trajectories overview aims to convey basic information about the
-trajectories, where they are, and what changes are involved. This is done using
-three sub panels. The first, on the left, contains a Sankey diagram illustrating
-the evolution of the clusters over time. The widths are proportional to the
-population involved. In our example in Figure~\ref{fig:ui}, the orange and green
-clusters contain most of the population and are fairly stable over time. The
-pink cluster is small and mostly stable. The purple cluster is increasing,
-mostly by incorporating areas that were previously orange. Since the purple
-group corresponds to the emergent 'young urban' group, this corroborates the
-findings of Delmelle~\citep{Delmelle2016,Delmelle2017}, showing that our
-network-based method can recover results from the traditional data processing
-approach.
+With the knowledge of what clusters are present, we can explore where they are
+through the maps, marked as \emph{where} in Figure~\ref{fig:ui}. While the maps
+on the lower part of the interface show the location of the clusters at each
+time, the larger map shows a summarised version, based on the trajectories of
+each region. \revision{1.9}{In simplified mode the colour corresponds to the
+cluster present in that trajectory for more than half the temporal samples, and
+is grey otherwise. With simplified colours disabled, the colours are the average
+of the colours of the clusters in that trajectory in RGB colour
+space~\footnote{\url{https://gka.github.io/chroma.js/\#chroma-average}}.}
 
-In the next panel, illustrated in the top middle of Figure~\ref{fig:ui}, is a
-transition matrix between the clusters. It indicates a rounded percentage of the
-population whose area changed between each pair of clusters. This kind of table
-can be found in the related literature~\citep{Delmelle2016}, so it is familiar
-to the advanced users. It not only informs the proportional changes, but allows
-the selection of the corresponding trajectories for further analysis.
+\revision{2.5}{Each trajectory represents a different temporal path through the
+clusters. Therefore the trajectories encode how the demographic characteristics
+changed over time. These changes are summarised by the two sections identified
+as \emph{how} in Figure~\ref{fig:ui}. In the left panel, there is a Sankey
+diagram where each ribbon represents a different trajectory. The widths are
+proportional to the population involved.} In our example in Figure~\ref{fig:ui},
+the orange and green clusters contain most of the population and are fairly
+stable over time. The pink cluster is small and mostly stable. The purple
+cluster is increasing, mostly by incorporating areas that were previously
+orange. Since the purple group corresponds to the emergent 'young urban' group,
+this corroborates the findings of Delmelle~\citep{Delmelle2016,Delmelle2017},
+showing that our network-based method can recover results from the traditional
+data processing approach.
 
-The panel in the top right of Figure~\ref{fig:ui} is a map of the region under
-analysis, summarising the geographical evolution of the clusters over time.  The
-colours are derived from the clusters involved in each trajectory, which are
-consistent across the linked views. 
+\revision{2.5}{In the next panel, illustrated in the top middle of
+Figure~\ref{fig:ui}, is a transition matrix between the clusters. It indicates a
+rounded percentage of regions whose area changed between each pair of
+clusters. In this example, we can see that all clusters are fairly stable, with
+more than ninety percent of identity transitions.} This kind of table can be
+found in the related literature~\citep{Delmelle2016}, so it is familiar to the
+advanced users. It not only informs the proportional changes, but allows the
+selection of specific changes for further analysis.
+
 
 The bottom part of the interface contains the details for the selected
-trajectories, or for the whole city if nothing is selected, as illustrated in
-Figure~\ref{fig:ui}. This panel contains two main regions: the small multiple
-maps, depicting the clusters at each year, and the stacked bar plots that
-summarise the overall composition of these regions. In this example, the maps
-show the transition from orange to green and purple in several regions over
-time. Clicking on a region in these maps will bring up a new panel with the
-original census data of this specific region. The actual population numbers are
-below the maps.
+trajectories, or for the whole city if nothing is selected, marked as \emph{who}
+in Figure~\ref{fig:ui}. The stacked bar plots summarise the overall demographic
+composition of these regions. In this example, the maps show the transition from
+orange to green and purple in several regions over time. Each aspect is
+represented by a stacked bar plot, where the width of each rectangle corresponds
+to \revision{1.10}{the percentage of population in that variable over the
+considered period. In this case, a little less than half of the population are
+married, and the percentage that are Widowers or Divorced is roughly similar.
+About half of the population work in Administrative jobs, a third never
+completed high-school, approximately forty percent have gross family income
+below 50,000USD per year. About sixty percent identify as white. Placing the
+mouse over one of the bars will open a small panel with the temporal evolution
+of the population percentage of that specific variable, and clicking on the
+chevron on the right side expands the corresponding aspect, showing census tract
+level statistics, with details of the temporal evolution of each variable and
+also the corresponding IQRs for the whole city. Those values differ from the
+total population percentage, while the overall population of this region is
+about sixty percent White, the average percentage of White population over the
+CTs is a little over forty percent.}
 
-
-Each aspect is represented by a stacked bar plot, where the width of each
-rectangle corresponds to \revision{the percentage of population in that variable
-over the considered period. In this case, a little less than half of the
-population are married, and the percentage that are Widowers or Divorced is
-roughly similar. About half of the population work in Administrative jobs, a
-third never completed high-school, approximately fourty percentq have gross
-family income below 50,000USD per year. About sixty percent identify as white.
-Placing the mouse over one of the bars will open a small panel with the temporal
-evolution of the population percentage of that specific variable, and clicking
-on the chevron on the right side expands the corresponding aspect, showing
-census level statistics, with details of the temporal evolution of each variable
-and also the corresponding IQRs for the whole city. Those values are potentially
-different, for instance, while the overall population of this region is about
-sixty percent White, it includes regions with wildly different percentages, so
-the average percentage of White population over the CTs is a little over fourty
-percent.}
+More importantly, this interface is fully interactive, allowing for a
+progressive exploration of the data. Clicking on a cluster in the cluster
+overview panel and the other panels will filter the results to consider only
+that cluster, highlighting the geographic regions and involved changes, and
+updating population count and demographic composition. If the user selects a
+region from the larger map, all identical trajectories are considered, and the
+whole interface changes to allow for further study of that specific region.
+Clicking on a region in small maps will bring up a new panel with the original
+census data of this specific region. Further, these selectors can be combined in
+different ways, enabling complex queries with instantaneous results.
