--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -54,16 +54,15 @@ comparison since data are not representative of the same spatial units. (...)"}
 
 \unsure{CHECK blue text below}
 \revision{1.1}{In some cases, harmonisation might seem methodologically
-adequate, if a study is focused on a small subregion, fixed in time, limiting
+adequate. If a study is focused on a small subregion that is fixed in time, limiting
 and modifying the data to fit that specific region of interest sounds not only
-reasonable, but recommended, albeit the creation of artificial data points.
-However, that is a simplistic view that ignores interactions beyond those
+reasonable, but recommended, even if it comes at the cost of producing artificial data points. However, this view is limited in that it ignores interactions beyond the fixed
 borders: each different portion of the area of interest may belong to larger
 homogeneous processes beyond these arbitrarily defined borders. This effect,
 along with the creation of artificial points, is caused by the geometry mismatch
 between the data and the region of interest. Instead of forcing one set of
 borders into another, our method sidesteps this issue by changing how the data
-is represented and interpreted.
+is represented and interpreted. It therefore allows researchers to examine changes in both the composition and extent of local areas.
 
 The main contribution of this paper is a method for longitudinal geographical
 data representation and processing that works with the original data by
