--- a/paper/main.tex
+++ b/paper/main.tex
@@ -135,7 +135,7 @@
   identification of spatio-temporal homogeneous regions and their dynamics,
   enabling the exploration of their composition and extents.  Using a simple
   network representation, the method enables temporal regionalisation
-  \emph{without the need for geographical harmonisation}.q
+  \emph{without the need for geographical harmonisation}.
     
   To allow for a transparent corroboration of our method, we use it as a basis
   for an interactive and intuitive interface for the progressive exploration of
