--- a/paper/method.tex
+++ b/paper/method.tex
@@ -222,6 +222,11 @@ as the number of clusters and the colour option. The gear button allows access
 to the other configuration options that do require further processing, such as
 changing location, aspects, and weights. 
 
+The main functionalities of the interface allow users to examine four
+inter-related questions central to understanding local area dynamics. 1)
+\emph{What} do the clusters consist in?; 2) \emph{Where} are they located; 3)
+\emph{How} do they change?; and 4) \emph{Who} occupy them? We discuss each in
+turn.  
 
 The cluster overview panel, marked as \emph{what} in Figure~\ref{fig:ui},
 displays the most relevant aspects for each cluster, based on the distance
@@ -297,7 +302,7 @@ of the population percentage of that specific variable, and clicking on the
 chevron on the right side expands the corresponding aspect, showing census tract
 level statistics, with details of the temporal evolution of each variable and
 also the corresponding IQRs for the whole city. Those values differ from the
-total population percentage, while the overall population of this region is
+total population percentage. While the overall population of this region is
 about sixty percent White, the average percentage of White population over the
 CTs is a little over forty percent.}
 
