getting ready to send

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -52,7 +52,7 @@ boundaries (...)"}~\citep{Dmowska2017}, \emph{"(...) This limits cross-year
 comparison since data are not representative of the same spatial units. (...)"}
 ~\citep{Allen2018}. 
 
-\unsure{CHECK blue text below}
+
 \revision{1.1}{In some cases, harmonisation might seem methodologically
 adequate. If a study is focused on a small subregion that is fixed in time, limiting
 and modifying the data to fit that specific region of interest sounds not only
@@ -72,9 +72,9 @@ Even in the case of a small, temporally fixed, region of interest, our approach
 leads to a better understanding of its dynamics by exploring the related
 data-driven homogeneous regions. }
 
-To allow a proper examination of our method and its results, we built an online
+To allow a proper examination of our method and its results, we built a prototype online
 interactive system using this representation. It enables users to visualise,
-interpret, and explore trajectories of neighbourhood change. This interface
+interpret, and explore trajectories of neighbourhood change. This prototype
 helps validate our method, by allowing it to be compared to existing and future
 methods. Further, it is a significant contribution to the research community: it
 provides a vehicle for quickly and easily grasping complex long-term changes,
