--- a/paper/main.tex
+++ b/paper/main.tex
@@ -180,7 +180,7 @@ The feedback from experts was positive and most of them were able to extract
 insight from the prototype while indicating interest in using it for their
 research efforts.  Since our interface can be used by non-experts as well, we
 also contributed to scientific dissemination and stakeholder transparency in
-urban sciences. \unsure{CHECK}\revision{1.12.6/2.6.5}{Building on the comments
+urban sciences. \revision{1.12.6/2.6.5}{Building on the comments
 of the experts and other colleagues exposed to our prototype, a future iteration
 of this prototype would include a simplified interface and faster computation
 times, but more importantly the option to define the region of study and add
