--- a/paper/method.tex
+++ b/paper/method.tex
@@ -199,19 +199,20 @@ details are presented in Section~\ref{sec:study}.
     \caption{Initial interface of our method showing the demographic evolution of Chicago and identifying the objectives of each plot.
         \textbf{(what)}: Cluster overview illustrating the most relevant aspect for each cluster. 
         \textbf{(where)}: Maps illustrating the geographical location, both as an overall summary and for each year.
-        \textbf{(how)}: Tabular and visual summmarisation of how the regions classification changed over time.
+        \textbf{(how)}: Tabular and visual summary of how the regions classification changed over time.
         \textbf{(who)}: Demographic details for the currently selected data.
         \label{fig:ui}}
 \end{figure*}
 
 
-As illustrated by Figure~\ref{fig:ui}\unsure{CHECK image/ sec 4.5}, our proposed
-interface heavily relies on colour to express cluster-related information. We
-adopted this convention because colours can be used in all our visual tools in a
-coherent manner. However, there is a limit on the number of distinct colours
-that can be used. We limited the number of clusters to eight because this was
-the largest number of colours that we could reliably and accessibly use, derived
-from the 8-class Dark2 set from ColorBrewer~\citep{ColorBrewer}. 
+As illustrated by Figure~\ref{fig:ui}, our proposed interface heavily
+relies on colour to express cluster-related information. We adopted
+this convention because colours can be used in all our visual tools in
+a coherent manner. However, there is a limit on the number of distinct
+colours that can be used. We limited the number of clusters to eight
+because this was the largest number of colours that we could reliably
+and accessibly use, derived from the 8-class Dark2 set from
+ColorBrewer~\citep{ColorBrewer}.
 
 
 The configuration panel, on top left in Figure~\ref{fig:ui}, displays the
