--- a/paper/main.tex
+++ b/paper/main.tex
@@ -74,7 +74,7 @@
 % \newpage
 
 
-\doublespacing
+%\doublespacing
 \title{Sidestepping geographic harmonisation: a new method for handling data over evolving spatial regions}
 %\author{Fabio Dias, Daniel Silver\\University of Toronto}
 \author{}
